bluec-tests/tests/invalid/types_float/complement_float.c
int main(void) {
    /* You can't take the bitwise complement of a float */
    float f = ~10.0f;
    return 0;
}